{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 33,
  "lineage": "7cd66f8d-9148-c0d1-5e7d-221908afe74a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-054817bfa71bb822d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-233-37-213.compute-1.amazonaws.com",
            "public_ip": "18.233.37.213",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aeeebd8d2ab47354",
            "arn": "arn:aws:ec2:us-east-1:637661158709:instance/i-0d77b3d0153d28ae1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d77b3d0153d28ae1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "kabirg",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07c0c94fd3e07ebc0",
            "private_dns": "ip-10-0-16-46.ec2.internal",
            "private_ip": "10.0.16.46",
            "public_ip": "3.239.20.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0009db1c436643e0a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd3269a7f80a9e28",
            "tags": {
              "Name": "kag-jenkins_jenkins"
            },
            "tags_all": {
              "Name": "kag-jenkins_jenkins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-047c7a382874c061b"
            ]
          },
          "dependencies": [
            "aws_security_group.webserver_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637661158709:internet-gateway/igw-07969d1043ea9c9fd",
            "id": "igw-07969d1043ea9c9fd",
            "owner_id": "637661158709",
            "tags": {
              "Name": "kag-jenkins_igw"
            },
            "tags_all": {
              "Name": "kag-jenkins_igw"
            },
            "vpc_id": "vpc-040d944ae5f05cc55"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637661158709:route-table/rtb-05df89e2106ea5b11",
            "id": "rtb-05df89e2106ea5b11",
            "owner_id": "637661158709",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07969d1043ea9c9fd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kag-jenkins_public_rt"
            },
            "tags_all": {
              "Name": "kag-jenkins_public_rt"
            },
            "vpc_id": "vpc-040d944ae5f05cc55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b51c953d4a9d89c6",
            "route_table_id": "rtb-05df89e2106ea5b11",
            "subnet_id": "subnet-0dd3269a7f80a9e28"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637661158709:security-group/sg-047c7a382874c061b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047c7a382874c061b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "webserver_sg",
            "name_prefix": "",
            "owner_id": "637661158709",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kag-jenkins_sg"
            },
            "tags_all": {
              "Name": "kag-jenkins_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-040d944ae5f05cc55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637661158709:subnet/subnet-0dd3269a7f80a9e28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/19",
            "id": "subnet-0dd3269a7f80a9e28",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637661158709",
            "tags": {
              "Name": "kag-jenkins_public_subnet"
            },
            "tags_all": {
              "Name": "kag-jenkins_public_subnet"
            },
            "vpc_id": "vpc-040d944ae5f05cc55"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637661158709:vpc/vpc-040d944ae5f05cc55",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-024caa82074f58026",
            "default_route_table_id": "rtb-03506e641634b1a7e",
            "default_security_group_id": "sg-01cf05750cac7ad35",
            "dhcp_options_id": "dopt-60814119",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-040d944ae5f05cc55",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03506e641634b1a7e",
            "owner_id": "637661158709",
            "tags": {
              "Name": "kag-jenkins_vpc"
            },
            "tags_all": {
              "Name": "kag-jenkins_vpc"
            }
          }
        }
      ]
    }
  ]
}